@@ -66,6 +66,7 @@ UDP, TCP and TLS protocols.
     parser.add_argument('-vv', '--more_verbose', help='Increase more verbosity', dest='more_verbose', action="count")
     parser.add_argument('-f', '--file', type=str, help='File with several IPs or network ranges', dest='file', default='')
     parser.add_argument('--nocolor', help='Show result without colors', dest='nocolor', action="count")
+    parser.add_argument('-o', '--output-file', type=str, help='Save data into a log file', dest='ofile', default='')
 
     # Array for all arguments passed to script
     args = parser.parse_args()
@@ -105,8 +106,9 @@ UDP, TCP and TLS protocols.
         PING = args.ping
         FILE = args.file
         NOCOLOR = args.nocolor
+        OFILE = args.ofile
 
-        return IPADDR, HOST, PORT, PROTO, METHOD, DOMAIN, CONTACTDOMAIN, FROMNAME, FROMUSER, FROMDOMAIN, TONAME, TOUSER, TODOMAIN, UA, THREADS, VERBOSE, PING, FILE, NOCOLOR
+        return IPADDR, HOST, PORT, PROTO, METHOD, DOMAIN, CONTACTDOMAIN, FROMNAME, FROMUSER, FROMDOMAIN, TONAME, TOUSER, TODOMAIN, UA, THREADS, VERBOSE, PING, FILE, NOCOLOR, OFILE
     except ValueError:
         print('[-] Error: Bad IP format')
         sys.exit(1)
